# registry

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: publish-dockerhub.yml
alembic/: env.py
alembic/versions/: 4756f3345db0_database_creation.py  4803ba755674_initial_migration.py
backend/: __init__.py
backend/config/: config.py  settings.yaml
backend/functions/: normalization.py
backend/models/: __init__.py  base.py  certificates.py  deployments.py  domains.py  routes.py  server_names.py
backend/routes/: __init__.py  domains.py  main.py
backend/services/: __init__.py  config_importer.py  domain_service.py  nginx.py
backend/templates/: nginx_http_config.mako  nginx_stream_config.mako
backend/utils/: __init__.py  engine.py  middlewares.py
docker/: nginx-admin-available.conf  nginx.conf
registry/: package-lock.json  package.json  vue.config.js
registry/public/: index.html
registry/src/: App.vue  i18n.js  main.js
registry/src/assets/: main.scss  variables.scss
registry/src/assets/css/: fonts.css  old.css  reset.css
registry/src/components/: Domains.vue  Header.vue  Input.vue  Selection.vue  materialIcon.vue
registry/src/locales/: en.yaml  ru.yaml
registry/src/router/: index.js
registry/src/services/: axios.service.js  backend.service.js  icons.service.js
registry/src/views/: Edit.vue  Index.vue  Preview.vue
